populate mock data to history order list view

--- a/app/src/main/res/layout/activity_main_history_order_list_item.xml
+++ b/app/src/main/res/layout/activity_main_history_order_list_item.xml
@@ -18,6 +18,7 @@
             android:src="@drawable/ic_rounded_corners_horizontal_bar" />
 
         <TextView
+            android:id="@+id/toppings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
