--- a/app/src/main/res/layout/activity_main_history_order_list_item.xml
+++ b/app/src/main/res/layout/activity_main_history_order_list_item.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_transparent_rounded_corner"
     android:backgroundTint="@color/white"
-    android:padding="15dp">
+    android:gravity="center_vertical"
+    android:paddingStart="15dp">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:orientation="vertical">
 
         <ImageView
@@ -30,6 +34,18 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="15dp"
         android:src="@drawable/ic_whole_pizza" />
+
+    <ImageView
+        android:id="@+id/btn_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:src="@drawable/ic_trash_can_delete"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 </LinearLayout>
