--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,6 +91,18 @@
                 android:textSize="@dimen/text_size_title"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/btn_edit_list_view_history_order"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:gravity="end"
+                android:text="@string/edit"
+                android:textColor="@color/carnation_300"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
 
         <ListView
