--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mercury">#FFE5E5E5</color>
+    <color name="slate_gray">#FF6C7693</color>
 </resources>
