--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/greeting" />
+            android:text="@string/greeting"
+            android:textColor="@color/slate_gray" />
 
         <LinearLayout
             android:layout_width="match_parent"
