--- a/app/src/main/res/layout/fragment_toppings.xml
+++ b/app/src/main/res/layout/fragment_toppings.xml
@@ -45,7 +45,10 @@
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:layout_weight="1"
-        android:numColumns="2" />
+        android:horizontalSpacing="5dp"
+        android:numColumns="2"
+        android:verticalSpacing="5dp"
+        tools:listitem="@layout/fragment_toppings_grid_item" />
 
     <RelativeLayout
         android:layout_width="match_parent"
