--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,11 +38,13 @@
             android:textColor="@color/slate_gray" />
 
         <LinearLayout
+            android:id="@+id/btn_customize_pizza"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:background="@drawable/bg_btn_customize_pizza"
             android:clickable="true"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:paddingStart="15dp"
             android:paddingTop="30dp"
