enable showing topping grid view and selecting toppings

--- a/app/src/main/res/layout/fragment_toppings_grid_item.xml
+++ b/app/src/main/res/layout/fragment_toppings_grid_item.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/topping_card"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="165dp"
     android:background="@drawable/bg_topping_card"
     android:orientation="vertical"
     android:padding="10dp">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@drawable/bg_topping_icon">
 
         <ImageView
+            android:id="@+id/topping_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -20,6 +23,7 @@
             android:src="@drawable/ic_topping_tomatoes" />
 
         <ImageView
+            android:id="@+id/ic_topping_selection_status"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="top|end"
@@ -28,11 +32,13 @@
     </FrameLayout>
 
     <TextView
+        android:id="@+id/topping_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:textColor="@color/slate_gray"
         tools:text="Tomatoes" />
 
 </LinearLayout>
