--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="Name">
+        android:hint="@string/hint_required_edit_text_name">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_name"
@@ -62,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="Address">
+        android:hint="@string/hint_required_edit_text_address">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_address"
@@ -77,7 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="City">
+        android:hint="@string/hint_required_edit_text_city">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_city"
@@ -92,7 +92,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="Zip Code">
+        android:hint="@string/hint_required_edit_text_zip_code">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_zip_code"
